test/corpus/types.txt
==================
Type definitions
==================

# This is an example comment
namespace schema http://schema.org/


# A comment after some newlines is good to have
namespace rdf http://www.w3.org/1999/02/22-rdf-syntax-ns#
namespace xsd http://www.w3.org/2001/XMLSchema#

type foo <>

type bar {}

type person {
  ex:name -> string
  ex:location -> ? [
    ex:address <- string
    ex:coordinates <- {
      ex:lat -> double
      ex:long -> double
    }
  ]
}

---

(source_file
  (comment)
  (namespace_definition (identifier) (namespace_uri))
  (comment)
  (namespace_definition (identifier) (namespace_uri))
  (namespace_definition (identifier) (namespace_uri))
  (type_definition (identifier) (uri))
  (type_definition (identifier) (product))
  (type_definition
    (identifier)
    (product
      (component (term) (identifier))
      (component
        (term)
        (optional
          (coproduct
            (option (term) (identifier))
            (option
              (term)
              (product
                (component (term) (identifier))
                (component (term) (identifier))))))))))